Using gatling plugin to simplify configurations